WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63019
Incorrect clamping on SVG masks when root element is not located at (0,0)
https://bugs.webkit.org/show_bug.cgi?id=63019
Summary
Incorrect clamping on SVG masks when root element is not located at (0,0)
Tim Horton
Reported
2011-06-20 15:01:33 PDT
Currently, when creating the mask image, we clamp its rect by svgRoot->contentBoxRect() (equivalent to bounds). However, the mask image origin is absolute, not relative to the svgRoot. Therefore, when the origin of svgRoot is not at (0,0), the clamping is incorrect. If we instead clamp by svgRoot->frameRect(), the absolute frame of the svgRoot, we get the expected results. Test case attached (expected: a quarter of a blue circle, actual: nothing!), patch forthcoming.
Attachments
Test case
(897 bytes, application/xhtml+xml)
2011-06-20 15:02 PDT
,
Tim Horton
no flags
Details
Fix incorrect clamping on SVG masks
(18.39 KB, patch)
2011-06-20 15:35 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2011-06-20 15:02:36 PDT
Created
attachment 97864
[details]
Test case
Tim Horton
Comment 2
2011-06-20 15:35:02 PDT
Created
attachment 97869
[details]
Fix incorrect clamping on SVG masks
Tim Horton
Comment 3
2011-06-20 16:02:33 PDT
<
rdar://problem/9474534
>
WebKit Review Bot
Comment 4
2011-06-20 16:44:31 PDT
Comment on
attachment 97869
[details]
Fix incorrect clamping on SVG masks Clearing flags on attachment: 97869 Committed
r89313
: <
http://trac.webkit.org/changeset/89313
>
WebKit Review Bot
Comment 5
2011-06-20 16:44:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug