2011-06-20  Tim Horton  <timothy_horton@apple.com>

Reviewed by Darin Adler.

        Incorrect clamping on SVG masks when root element is not located at (0,0)
        https://bugs.webkit.org/show_bug.cgi?id=63019

        * platform/mac/svg/custom/absolute-root-position-masking-expected.png: Added.
        * platform/mac/svg/custom/absolute-root-position-masking-expected.txt: Added.
        * platform/qt/svg/custom/absolute-root-position-masking-expected.png: Added.
        * platform/qt/svg/custom/absolute-root-position-masking-expected.txt: Added.
        * svg/custom/absolute-root-position-masking.xhtml: Added.
2011-06-20  Tim Horton  <timothy_horton@apple.com>

        Reviewed by Darin Adler.

        Incorrect clamping on SVG masks when root element is not located at (0,0)
        https://bugs.webkit.org/show_bug.cgi?id=63019

        We should be using frameRect(), not contentBoxRect() for the rect to
        clamp to when creating an SVG mask image.

        Test: svg/custom/absolute-root-position-masking.xhtml

        * rendering/svg/SVGImageBufferTools.cpp:
        (WebCore::SVGImageBufferTools::clampedAbsoluteTargetRectForRenderer):

git-svn-id: svn://svn.chromium.org/blink/trunk@89313 bbb929c8-8fbe-4397-9dbb-9b2b20218538